2006-05-02  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* src/iterators.c (igraph_vit_create) : bug corrected
	
2006-05-02  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* src/igraph.h, src/basic_query.c (igraph_are_connected) :
	modified to return int instead of igraph_bool_t (the actual result
	is now a formal parameter)
	* interfaces/python/graphobject.c, interfaces/R/src/rinterface.c :
	adapted to new interface of igraph_are_connected
	
2006-04-30  Gabor Csardi  <csardi@kzoo.edu>

	* src/igraph.h (igraph_vs_t, igraph_es_t) : added slots from 
	sequence vertex selector type
	* src/iterators.c (igraph_vs_seq, igraph_vss_seq)
	(igraph_es_seq, igraph_ess_seq) : added
	(igraph_vs_destroy, igraph_vit_create, igraph_es_destroy) 
	(igraph_eit_create) : updated

	* src/iterators.c (igraph_es_seq) : argument bug corrected

2006-04-29  Gabor Csardi  <csardi@kzoo.edu>

	* src/structural_properties.c (igraph_minimum_spanning_tree_prim) :
	readded
	* examples/simple/igraph_minimum_spanning_tree_prim.c : added

2006-04-28  Gabor Csardi  <csardi@kzoo.edu>

	* src/type_indexededgelist.c (igraph_delete_vertices) : attribute
	handling bug corrected

	* src/adjlist.c (igraph_i_adjedgelist_init)
	(igraph_i_adjedgelist_destroy) : added

	* src/structural_properties.c (igraph_edge_betweenness) : added
	* examples/simple/igraph_edge_betweenness.c : added, empty

	* src/iterators.c (igraph_ess_adj) : added

	* src/structure_generators.c (igraph_small) : added
	* examples/simple/igraph_small.c : added

	* src/structural_properties.c (igraph_transitivity_undirected) :
	readded
	* examples/simple/igraph_transitivity.c : added

	* src/igraph.h (igraph_i_adjedgelist_get) : pointer argument
	* src/structural_properties.c (igraph_edge_betweenness) : updated
	
2006-04-27  Gabor Csardi  <csardi@kzoo.edu>

	* src/iterators.c : completely rewritten

	* src/type_indexededgelist.c (igraph_delete_vertices)
	(igraph_degree) : updated
	* src/motifs.c (igraph_motifs_randesu) : updated