@@ -1,0 +1,8 @@
+ 0 0 1 0
+ 0 0 0 0
+ 1 0 0 1
+ 0 0 1 0
+ 0 1 0 0
+ 1 0 0 0
+ 0 0 0 0
+ 0 0 0 0
