@@ -1,3 +1,8 @@
+2006-05-02  Gabor Csardi  <csardi@kzoo.edu>
+
+	* src/cocitation.c (igraph_cocitation_real) : bug corrected
+	* examples/simple/igraph_cocitation.c : added
+
 2006-05-02  Tamas Nepusz  <ntamas@rmki.kfki.hu>
 
 	* src/iterators.c (igraph_vit_create) : bug corrected
